--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Web site created using create-react-app" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>PhiMajor Furkan Job Application Task</title>
+    <title>Furkan AGCA Job Application Task</title>
 </head>
 
 <body>
